<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/d4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/d4"
        app:layout_constraintEnd_toStartOf="@+id/d6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/tetrahedron_small"
        android:drawableStart="@drawable/tetrahedron_small" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/d6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/d6"
        app:layout_constraintBaseline_toBaselineOf="@+id/d4"
        app:layout_constraintEnd_toStartOf="@+id/d8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/d4"
        android:drawableLeft="@drawable/cube_small"
        android:drawableStart="@drawable/cube_small" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/d8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/d8"
        app:layout_constraintBaseline_toBaselineOf="@+id/d6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/d6"
        android:drawableLeft="@drawable/octahedron_small"
        android:drawableStart="@drawable/octahedron_small" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/d10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/d10"
        app:layout_constraintEnd_toStartOf="@+id/d12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d4"
        android:drawableLeft="@drawable/pent_trapez_small"
        android:drawableStart="@drawable/pent_trapez_small" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/d12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/d12"
        app:layout_constraintBaseline_toBaselineOf="@+id/d10"
        app:layout_constraintEnd_toStartOf="@+id/d20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/d10"
        android:drawableLeft="@drawable/dodecahedron_small"
        android:drawableStart="@drawable/dodecahedron_small" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/d20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/d20"
        app:layout_constraintBaseline_toBaselineOf="@+id/d12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/d12"
        tools:text="@string/d20"
        android:drawableLeft="@drawable/icosahedron_small"
        android:drawableStart="@drawable/icosahedron_small" />

    <TextView
        android:id="@+id/results"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="Results: "
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numDice" />

    <EditText
        android:id="@+id/numDice"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/edit_num"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/modifier"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d10"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/modifier"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/edit_mod"
        android:digits="-0123456789"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/numDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/numDice"
        android:importantForAutofill="no"/>

</androidx.constraintlayout.widget.ConstraintLayout>