<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/calc_preview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="@dimen/calc_num_size" />

    <!-- First row -->
    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_d2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/d2"
        android:textSize="@dimen/calc_text_size"
        android:background="@drawable/button_outline"
        android:textColor="?darkButtonTextColor"
        app:layout_constraintTop_toBottomOf="@id/calc_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/calc_d3" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_d3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/d3"
        android:textSize="@dimen/calc_text_size"
        android:background="@drawable/button_outline"
        android:textColor="?darkButtonTextColor"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_d2"
        app:layout_constraintStart_toEndOf="@id/calc_d2"
        app:layout_constraintEnd_toStartOf="@id/calc_d4" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_d4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/d4"
        android:textSize="@dimen/calc_text_size"
        android:background="@drawable/button_outline"
        android:textColor="?darkButtonTextColor"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_d2"
        app:layout_constraintStart_toEndOf="@id/calc_d3"
        app:layout_constraintEnd_toStartOf="@id/calc_d6" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_d6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/d6"
        android:textSize="@dimen/calc_text_size"
        android:background="@drawable/button_outline"
        android:textColor="?darkButtonTextColor"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_d2"
        app:layout_constraintStart_toEndOf="@id/calc_d4"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Second row -->
    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_d8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/d8"
        android:textSize="@dimen/calc_text_size"
        android:background="@drawable/button_outline"
        android:textColor="?darkButtonTextColor"
        app:layout_constraintTop_toBottomOf="@id/calc_d2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/calc_d10" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_d10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/d10"
        android:textSize="@dimen/calc_text_size"
        android:background="@drawable/button_outline"
        android:textColor="?darkButtonTextColor"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_d8"
        app:layout_constraintStart_toEndOf="@id/calc_d8"
        app:layout_constraintEnd_toStartOf="@id/calc_d12" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_d12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/d12"
        android:textSize="@dimen/calc_text_size"
        android:background="@drawable/button_outline"
        android:textColor="?darkButtonTextColor"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_d8"
        app:layout_constraintStart_toEndOf="@id/calc_d10"
        app:layout_constraintEnd_toStartOf="@id/calc_d20" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_d20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/d20"
        android:textSize="@dimen/calc_text_size"
        android:background="@drawable/button_outline"
        android:textColor="?darkButtonTextColor"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_d8"
        app:layout_constraintStart_toEndOf="@id/calc_d12"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Third row -->
    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_d100"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/d100"
        android:textSize="@dimen/calc_text_size"
        android:background="@drawable/button_outline"
        android:textColor="?darkButtonTextColor"
        app:layout_constraintTop_toBottomOf="@id/calc_d8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/calc_dN" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_dN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dN"
        android:textSize="@dimen/calc_text_size"
        android:background="@drawable/button_outline"
        android:textColor="?darkButtonTextColor"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_d100"
        app:layout_constraintStart_toEndOf="@id/calc_d100"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Calculator panel -->
    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="7"
        android:textSize="@dimen/calc_num_size"
        android:layout_marginStart="@dimen/calc_margin"
        android:layout_marginLeft="@dimen/calc_margin"
        app:layout_constraintTop_toBottomOf="@id/calc_d100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/calc_8" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="8"
        android:textSize="@dimen/calc_num_size"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_7"
        app:layout_constraintStart_toEndOf="@id/calc_7"
        app:layout_constraintEnd_toStartOf="@id/calc_9" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="9"
        android:textSize="@dimen/calc_num_size"
        android:layout_marginEnd="@dimen/calc_margin"
        android:layout_marginRight="@dimen/calc_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_7"
        app:layout_constraintStart_toEndOf="@id/calc_8"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="4"
        android:textSize="@dimen/calc_num_size"
        android:layout_marginStart="@dimen/calc_margin"
        android:layout_marginLeft="@dimen/calc_margin"
        app:layout_constraintTop_toBottomOf="@id/calc_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/calc_5" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="5"
        android:textSize="@dimen/calc_num_size"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_4"
        app:layout_constraintStart_toEndOf="@id/calc_4"
        app:layout_constraintEnd_toStartOf="@id/calc_6" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="6"
        android:textSize="@dimen/calc_num_size"
        android:layout_marginEnd="@dimen/calc_margin"
        android:layout_marginRight="@dimen/calc_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_4"
        app:layout_constraintStart_toEndOf="@id/calc_5"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="@dimen/calc_num_size"
        android:layout_marginStart="@dimen/calc_margin"
        android:layout_marginLeft="@dimen/calc_margin"
        app:layout_constraintTop_toBottomOf="@id/calc_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/calc_2" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="2"
        android:textSize="@dimen/calc_num_size"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_1"
        app:layout_constraintStart_toEndOf="@id/calc_1"
        app:layout_constraintEnd_toStartOf="@id/calc_3" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="@dimen/calc_num_size"
        android:layout_marginEnd="@dimen/calc_margin"
        android:layout_marginRight="@dimen/calc_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_1"
        app:layout_constraintStart_toEndOf="@id/calc_2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="@dimen/calc_num_size"
        android:layout_marginStart="@dimen/calc_margin"
        android:layout_marginLeft="@dimen/calc_margin"
        app:layout_constraintTop_toBottomOf="@id/calc_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/calc_0" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="@dimen/calc_num_size"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_minus"
        app:layout_constraintStart_toEndOf="@id/calc_minus"
        app:layout_constraintEnd_toStartOf="@id/calc_plus" />

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/calc_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="+"
        android:textSize="@dimen/calc_num_size"
        android:layout_marginEnd="@dimen/calc_margin"
        android:layout_marginRight="@dimen/calc_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/calc_minus"
        app:layout_constraintStart_toEndOf="@id/calc_0"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Submit button -->
    <Button
        android:id="@+id/calc_submit"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_outline"
        android:text="@string/roll"
        android:textColor="?darkButtonTextColor"
        android:textSize="@dimen/calc_text_size"
        android:layout_marginTop="@dimen/calc_margin"
        app:layout_constraintEnd_toStartOf="@id/calc_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_0"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Clear button -->
    <Button
        android:id="@+id/calc_clear"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_outline"
        android:text="@string/clear"
        android:textColor="?darkButtonTextColor"
        android:textSize="@dimen/calc_text_size"
        android:layout_marginTop="@dimen/calc_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calc_submit"
        app:layout_constraintTop_toBottomOf="@id/calc_0"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>